# ai-models-ensembles

./: .gitignore  .pre-commit-config.yaml  LICENSE  PAPER_REVIEW_ams_aies_blind_2026-07-06.md  README.md  animator.py  animator_3d.py  config.sh  create_zarr.py  download_era5.py  download_ifs.py  ensemble_forecast_pipeline.sh  environment.yml  evaluation.py  perturb_era5.py  perturb_fourcastnet.py  perturb_graphcast.py  pyproject.toml  requirements.txt  runscript.sh  sbatch.sh  submit_convert_zarr.sh  submit_download_data.sh  submit_ensemble_job.sh  submit_ml_inference.sh  submit_verification.sh  validate.sh
199912250000/graphcast/: fields.txt
ai_models_ensembles/: aifs_fresh_perturbation.py  animate_2d_maps.py  animate_3d_grids.py  animator.py  animator_3d.py  aurora_fresh_perturbation.py  cli.py  convert_grib_to_zarr.py  data_load_preproc.py  download_era5.py  download_ifs.py  download_ifs_control.py  download_ifs_ensemble.py  download_re_analysis.py  e2s_data.py  e2s_inference.py  e2s_models.py  e2s_perturbation.py  evaluation.py  graphcast_coarse_perturbation.py  intercompare.py  perturb_era5.py  perturb_fourcastnet.py  perturb_fourcastnet_weights.py  perturb_graphcast_weights.py  plot_0d_distributions.py  plot_1d_timeseries.py  preprocess_data.py  sfno_fresh_perturbation.py  swissclim_format.py
ai_models_ensembles/utils/: __init__.py  artifacts.py
config/: swissclim_eval.yaml.template  swissclim_ifs_ens.yaml.template  swissclim_intercompare.yaml
containers/: Dockerfile  aifsens.dockerfile  atlas.dockerfile  aurora.dockerfile  build.sh  fcn3.dockerfile  graphcast.dockerfile  sfno.dockerfile  submit_build.sh
figures/: calibration_basis_table.tex  draw_perturbation_schematic.py  draw_phase3_schematic.py  experiments_tables.tex  experiments_tables_preview.tex  headline_7way_table.tex  headline_8way_table.tex  inference_cost_table.tex  milton_summary_table.tex  per_variable_crpss_table.tex  table_c1_production_metrics.tex
handoff_staging/: 2026-06-14_paper_e2e_review.md  LATEST.md
scripts/: README.md  check_gpu.py  config.sh  evaluate_ablation.sh  evaluate_baselines.sh  evaluate_baselines_remaining.sh  relaunch_phase1_sfno_graphcast.sh  submit_ablation.sh  submit_all_inference.sh  submit_convert_zarr.sh  submit_download_data.sh  submit_ic_backfill.sh  submit_ml_inference.sh  submit_seed_robustness.sh  submit_verification.sh  supervise_phase1_relaunch.sh
src/: animator.py  animator_3d.py  data_load_preproc.py  evaluation.py  perturb_graphcast.py
tests/: QUICKSTART_TEST.md  check_workflow_status.sh  run_minimal_test.sh  test_basic_functionality.py  test_repository_smoke.py  test_swissclim_format.py  validate.sh
tools/: QUICKSTART_TEST.md  README.md  aggregate_signature_kernel_score.py  assemble_calibration_table.py  assemble_production_metrics_table.py  block_bootstrap_crpss.py  calibration_crpss.py  check_workflow_status.sh  compare_seed_robustness.py  compute_climatology_1990_2019.py  compute_climatology_crps_vs_eval.py  compute_member_vs_mean_rmse.py  compute_per_init_crps.py  compute_persistence_mae.py  compute_perturbation_uplift.py  compute_rank_histograms.py  debug_e2e.py  diagnose_sfno_modes.py  diff_climatology_recompute.py  dump_aurora_keys.py  dump_graphcast_keys.py  dump_sfno_keys.py  energy_variogram_score.py  fill_ic_perturbed_levels.py  headline_7way_table.py  headline_8way_table.py  inspect_weights.py  model_colors.py  per_pixel_ssr.py  per_variable_crpss_table.py  plot_7way_spatial_mean_ssr.py  plot_bivariate.py  plot_headline_crpss_vs_lead.py  plot_headline_crpss_vs_lead_8way.py  plot_milton_member_spread_maps.py  plot_pit_histograms.py  plot_rank_histograms.py  plot_refresh_ssr.py  plot_sfno_phase6_ssr.py  plot_spatial_mean_ssr.py  (+47 more)
tools/data/: crps_clim_eval_1990_2019.json  crps_clim_eval_ablation_1990_2019.json  sigk_production.csv
tools/milton/: add_milton_refs.py  aggregate_tracks.py  analyze_milton_stats.py  env.sh  figures_milton.py  gen_missing_f3.py  lookup_walsh_refs.py  plot_aifs_wt_vs_ic_spread.py  restitch_all.py  sanity_plot.py  submit_milton_tracker.sh  submit_milton_tracker_phase5.sh  test_single_track.py  track_one_init.py  zotero_add_walsh_refs.py
