[project]
name = "ai-models-ensembles"
version = "0.2.0"
description = "earth2studio-backed ensemble forecasting with IC and weight perturbations + SwissClim verification"
authors = [{ name = "Simon Adamov", email = "simon.adamov@meteoswiss.ch" }]
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "zarr>=3.0",
    "xarray>=2024.10",
    "dask",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "earth2studio[graphcast,fcn,fcn3,sfno,gencast,pangu,fuxi,aifs]",
    "swissclim-evaluations @ git+https://github.com/swiss-ai/SwissClim_Evaluations.git@research",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=3.7", "ruff>=0.6"]

[project.scripts]
ai-ens = "ai_models_ensembles.cli:app"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ai_models_ensembles"]
